# math_for_the_kids

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  docker-compose.yml  pyproject.toml
backend/: adaptive.py  database.py  main.py  models.py
backend/generators/: arithmetic.py  clock.py  countries.py  english_letters.py  fractions.py  hebrew_letters.py  powers.py  sequences.py  trivia.py  word_problems.py
backend/generators/trivia_bank/: clue.json  direct.json
backend/routers/: admin.py  kids.py  problems.py  sessions.py
countries/: countries_capitals_trivia.json
data/: gemini_2_capitals.json  nikud_done.txt  nikud_todo.txt
exams/: ocr_output.txt
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  strings.ts  theme.ts
frontend/src/components/: Clock.tsx
frontend/src/pages/: Admin.tsx  KidSelect.tsx  Session.tsx  Summary.tsx  TopicSelect.tsx
nginx/: app.conf
scripts/: apply_nikud.py  import_ai_questions.py  import_haprofessor.py  scrape_haprofessor.py
