[project]
name = "math-for-the-kids"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12",
    "playwright>=1.58.0",
    "requests>=2.31",
]
